// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Should render and match the snapshot 1`] = `
<label
  class="styled__Container-gubfwv-1 hLuRwd"
>
  <span
    class="checkmark styled__Checkmark-gubfwv-3 dCsIEv"
  />
  <input
    class="styled__Input-gubfwv-2 kVKIKx"
    type="checkbox"
  />
  <span
    class="checkbox-label styled__Label-gubfwv-4 JqeJh"
    label=""
  />
</label>
`;

exports[`<Checkbox /> Should render with img, if it is checked 1`] = `
<label
  class="styled__Container-gubfwv-1 jjBLUt"
>
  <span
    class="checkmark styled__Checkmark-gubfwv-3 dCsIEv"
  >
    <svg
      aria-hidden="true"
      class="styled__TickIcon-gubfwv-0 lhQSam StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      height="22"
      viewBox="0 0 24 24"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.972 6.251a1.999 1.999 0 00-2.72.777l-3.713 6.682-2.125-2.125a2 2 0 10-2.828 2.828l4 4c.378.379.888.587 1.414.587l.277-.02a2 2 0 001.471-1.009l5-9a2 2 0 00-.776-2.72z"
      />
    </svg>
  </span>
  <input
    class="styled__Input-gubfwv-2 kVKIKx"
    type="checkbox"
  />
  <span
    class="checkbox-label styled__Label-gubfwv-4 hhmCJw"
    label="Test label"
  >
    Test label
  </span>
</label>
`;

exports[`<Checkbox /> Should render with label, if it is passed to props 1`] = `
<label
  class="styled__Container-gubfwv-1 hLuRwd"
>
  <span
    class="checkmark styled__Checkmark-gubfwv-3 dCsIEv"
  />
  <input
    class="styled__Input-gubfwv-2 kVKIKx"
    type="checkbox"
  />
  <span
    class="checkbox-label styled__Label-gubfwv-4 JqeJh"
    label="Test label"
  >
    Test label
  </span>
</label>
`;

exports[`<Checkbox /> Should render without input, if it is controlled in parent 1`] = `
<label
  class="styled__Container-gubfwv-1 hLuRwd"
>
  <span
    class="checkmark styled__Checkmark-gubfwv-3 dCsIEv"
  />
  <span
    class="checkbox-label styled__Label-gubfwv-4 JqeJh"
    label="Test label"
  >
    Test label
  </span>
</label>
`;
